@@ -124,7 +124,8 @@ subdirectories).
 
   Use this command when you want to synchronize the local repository with
   one or more of its remotes. You can specifiy the remotes to sync with;
-  the default is to sync with all remotes.
+  the default is to sync with all remotes. Or specify --fast to sync with
+  the remotes with the lowest annex-cost value.
 
   The sync process involves first committing all local changes, then
   fetching and merging the `synced/master` and the `git-annex` branch
